k8s/mtls-strict.yaml
apiVersion: security.istio.io/v1
kind: PeerAuthentication
metadata:
  name: default
  namespace: rapido-prod
spec:
  mtls:
    mode: STRICT
