k8s/admin-service-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: admin-service
  namespace: rapido-prod
spec:
  replicas: 1
  selector:
    matchLabels:
      app: admin-service

  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 1

  template:
    metadata:
      labels:
        app: admin-service

    spec:
      containers:
        - name: admin-service
          image: admin-service:otel
          imagePullPolicy: IfNotPresent

          ports:
            - containerPort: 8088

          readinessProbe:
            httpGet:
              path: /actuator/health/readiness
              port: 8088
            initialDelaySeconds: 15
            periodSeconds: 5
            timeoutSeconds: 2
            failureThreshold: 3

          livenessProbe:
            httpGet:
              path: /actuator/health/liveness
              port: 8088
            initialDelaySeconds: 25
            periodSeconds: 10
            timeoutSeconds: 2
            failureThreshold: 3

          resources:
            requests:
              cpu: "100m"
              memory: "128Mi"
            limits:
              cpu: "200m"
              memory: "256Mi"
