k8s/admin-service-service.yaml
apiVersion: v1
kind: Service

metadata:
  name: admin-service
  namespace: rapido-prod

spec:
  type: ClusterIP

  selector:
    app: admin-service

  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
